<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/my_primary"
    tools:context=".ProfileFragment">

    <!-- Title -->
    <TextView
        android:id="@+id/new_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Profile"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginTop="50dp"/>

    <!-- Profile Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/new_title_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="60dp"
        app:cardElevation="4dp">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img_1"
            android:scaleType="centerCrop"
            android:contentDescription="@string/profile_image" />

    </androidx.cardview.widget.CardView>

    <!-- Deskripsi Foto -->
    <androidx.cardview.widget.CardView
        android:id="@+id/deskripsi_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_card"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <TextView
            android:id="@+id/deskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:padding="16dp" />

    </androidx.cardview.widget.CardView>

    <!-- Info Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/info_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deskripsi_card"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:paddingTop="22dp"
            android:paddingBottom="22dp">

            <TextView
                android:id="@+id/informasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informasi"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"/>

            <!-- Name -->
            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_fajru_falah"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"/>

            <!-- Nim -->
            <TextView
                android:id="@+id/nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10120054"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"/>

            <!-- Email -->
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_fajrufalah14_gmail_com"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
